--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,10 @@
     /* rem 사용을 위한 폰트사이즈 지정 */
     font-size: 10px;
 }
-
+html{
+    background: linear-gradient(100deg, #b7bcff, #f8d7f2);
+    background-repeat: no-repeat;
+}
 body {
     /* 초반에 내용이 적을 때 높이기 부족한 경우 해결책 필요
     width: 100vw;
@@ -15,11 +18,6 @@ body {
 }
 
 /* 최상위 */
-#wrap {
-    width: 100%;
-    height: 100%;
-}
-
 #container {
     width: 90%;
     /* 중앙정렬 */
@@ -165,15 +163,16 @@ footer {
 @media (max-width:767px) {
 
     /*메인 푸터 대제목*/
-    .left p:first-child{
+    main>p:nth-child(1){
         font-size: 3rem;
         font-weight: 700;
         margin-bottom: 1.5rem;
     }
     
-    #myprojectsection>p {
+    main>p:nth-child(3){
         font-size: 3rem;
         font-weight: 700;
+        margin-bottom: 1.5rem;
     }
 
     .textsection p {
@@ -202,15 +201,16 @@ footer {
 @media (min-width:768px) and (max-width:1024px) {
 
     /*메인 푸터 대제목*/
-    .left p:first-child{
+    main>p:nth-child(1){
         font-size: 3rem;
         font-weight: 700;
         margin-bottom: 1.5rem;
     }
-
-    #myprojectsection>p {
+    
+    main>p:nth-child(3){
         font-size: 3rem;
         font-weight: 700;
+        margin-bottom: 1.5rem;
     }
     
     .textsection p {
@@ -237,54 +237,74 @@ footer {
 
 /* PC */
 @media (min-width:1025px) {
-    
-    .left {
-        width:50%;
-        margin: 0 auto;
-        float: left;
-    }
-
-    .right {
-        width:50%;
-        margin: 0 auto;
-        margin-top: 0;
-        float: right;
-    }
-
-    /*메인 푸터 대제목*/
-    #myprojectsection {
-        margin: 0 auto;
-        margin-top: 0rem;
-    }
-
-    .left p:first-child{
-        font-size: 3rem;
-        font-weight: 700;
-        margin-bottom: 1.5rem;
-    }
-    
-    #myprojectsection>p {
+    main>p{
+        text-align: center;
         font-size: 3rem;
         font-weight: 700;
     }
-    .left .item{
-        float: left;
-        width: 80%;
+
+    main{
+        width: 100%;
     }
-    .right .item {
-        width: 35%;
-        height: 15rem;
+    
+    footer{
         float: left;
-        background-color: rgba(255, 255, 255, .5);
-        /* 둥근 정도는 반응형이 아니니까 px로 조정 */
-        border-radius: 15px;
-        /* 내부박스는 안으로 들어오게 */
-        padding: 1.5rem;
-        margin: 1.5rem;
+        width: 100%;
     }
 
+    #introsection{
+        max-width: 34rem;
+        margin: 0 auto;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+    }
     .textsection p {
-        font-size: 1.8rem;
+        font-size: 7.2rem;
+        font-weight: 700;
+        color: #fff; text-shadow: /* White glow */ 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, /* Green glow */ 0 0 42px orange, 0 0 82px orange, 0 0 92px orange, 0 0 102px orange, 0 0 151px orange;
+        /* text-shadow: 
+        0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 
+        0 0 24px yellow, 0 0 41px yellow, 0 0 46px yellow, 0 0 51px yellow, 0 0 75px yellow; */
+    }
+    #myprojectsection .item{
+        max-width: 40rem;
+        float: left;
+    }
+
+    #myprojectsection {
+        width: 100%;
+        margin-top: 0rem;
+        margin: 0 auto;
+    }
+    #myprojectsection::after{
+        clear:both;
+        display:block;
+        content: '';
+    }
+    .row::after{
+        clear:both;
+        display:block;
+        content: '';
+    }
+    .row{
+        width: 94rem;
+        margin: 0 auto;
+    }
+    .row .item{
+        width: 43rem;
+        height: 43.2rem;
+    }
+    .row .item .card{
+        height: 95%;
+    }
+    .row .item .card .imagesection{
+        height: 100%;
+    }
+    .row .item .card .imagesection img{
+        height: 100%;
+    }
+    .textsection p {
+        font-size: 3rem;
         font-weight: 700;
         color: #fff; text-shadow: /* White glow */ 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, /* Green glow */ 0 0 42px orange, 0 0 82px orange, 0 0 92px orange, 0 0 102px orange, 0 0 151px orange;
         /* text-shadow: 
@@ -293,20 +313,14 @@ footer {
     }
 
     /*footer*/
-    footer {
-        bottom: 0;
-        margin: 0 auto;
-        text-align: center;
-        margin-bottom: 1.5rem;
-    }
 
     footer img {
-        width: 1.5rem;
+        width: 2.8rem;
         vertical-align: middle;
     }
 
     footer span {
-        font-size: 1.2rem;
+        font-size: 2.5rem;
         vertical-align: middle;
         font-weight: bold;
     }
